[gd_scene load_steps=4 format=3 uid="uid://854dmrdy2jd0"]

[ext_resource type="Script" path="res://Scripts/buy_button.gd" id="1_ekmjw"]
[ext_resource type="Theme" uid="uid://b80031dk3mg5e" path="res://Assets/themes/button_theme.tres" id="2_3mp88"]
[ext_resource type="FontFile" uid="uid://cxpul0hcnrfyt" path="res://Assets/fonts/PixelDigivolve-mOm9.ttf" id="3_d7cf0"]

[node name="BuyButton" type="Node2D"]
script = ExtResource("1_ekmjw")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -20.0
offset_right = 11.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_3mp88")
keep_pressed_outside = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_d7cf0")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="MarginContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="MarginContainer/Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
